...

        fun fromIntent(intent: Intent?): VpnServiceCommand? = when (intent?.action) {
            ACTION_CONNECT -> {
                val sessionId = intent.getLongExtra(EXTRA_SESSION_ID, 0)
                val profileId = intent.getStringExtra(EXTRA_PROFILE_ID)
                if (sessionId > 0 && !profileId.isNullOrBlank()) {
                    Connect(VpnSessionId(sessionId), VpnProfileId(profileId))
                } else {
                    null
                }
            }
            ACTION_PAUSE -> Pause
            ACTION_RESUME -> Resume
...
